# algorytmy-grafy

./: App.cpp  App.h  CMakeLists.txt  Menu.cpp  Menu.h  README.md  main.cpp
Algorithms/: Algorithm.cpp  Algorithm.h  ListAlgorithm.cpp  ListAlgorithm.h  MatrixAlgorithm.cpp  MatrixAlgorithm.h  Queue.cpp  Queue.h
Models/: ListModel.cpp  ListModel.h  MatrixModel.cpp  MatrixModel.h  Model.cpp  Model.h
